# advent-of-code

./: .gitignore  README.md  day12.py  day13.py  day14.py  ruff.toml
2020/: day15.py  day16.py  day19.py
2020/day02/: day2.py
2020/day04/: day4.py
2020/day05/: day5.py
2020/day07/: day7.py
2020/day08/: day8.py
2020/week1/: day6.py
2020/week2/: day11.py  day9.py
2021/day01/: day1b.py
2021/day02/: day2b.py
2021/day03/: day3a.py  day3b.py
2021/day06/: day6.py
2021/day07/: day7a.py
2021/day1/: day1a.py
2021/day10/: day10a.py  day10b.py
2021/day11/: day11a.py  day11b.py
2021/day12/: day12a.py  day12b.py
2021/day13/: day13.py
2021/day14/: day14a.py  day14b.py
2021/day15/: day15.py
2021/day16/: day16a.py
2021/day18/: day18a.py
2021/day2/: day2a.py
2021/day20/: day20a.py  day20b.py
2021/day21/: day21a.py  day21b.py
2022/: bootstrap.sh  create-template.sh
2023/: bootstrap.sh
2024/: bootstrap.sh  day01.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.dot  day24.py  day25.py  graph.dot  pyproject.toml  utils.py
2024/day-02/: answer.py
2024/day-06/: answer.py
2024/day-08/: answer.py
2024/day-09/: answer.py
2024/day-11/: answer.py
2024/day-12/: answer.py
2024/day-13/: answer.py
2025/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  utils.py
week1/: day1.py  day3.py
week2/: day10.py
(+73 files in other folders)
