[tool.poetry]
name = "advent-of-code-2024"
version = "1.0.0"
description = "Solutions for AoC 2024"
authors = ["Alex Yu <yu.alexanderx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
sympy = "*"
numpy = "*"
z3-solver = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
